--- a/pages/products.html
+++ b/pages/products.html
@@ -999,7 +999,7 @@
             <div class="footer-section">
                 <h3>Jaiho Labs</h3>
                 <p>Where Ideas Become Intelligent Products.</p>
-                <p class="sub-brand">A Division of <a href="jaihodigital.onrender.com" target="_blank">Jaho Digital</a></p>
+                <p class="sub-brand">A Division of <a href="https://jaiho-digital.onrender.com" target="_blank">Jaiho Digital</a></p>
             </div>
             <div class="footer-section">
                 <h3>Quick Links</h3>
@@ -1007,7 +1007,7 @@
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="research.html">Research</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="resources.html">Resources</a></li>
                 </ul>
             </div>
             <!--<div class="footer-section">
@@ -1019,9 +1019,10 @@
             <div class="footer-section">
                 <h3>Connect</h3>
                 <div class="footer-socials">
-                    <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/company/jaihoailabs" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/Jaiho-Digital" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="https://instagram.com/jaihodigital" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://huggingface.co/jaiholabs" target="_blank" aria-label="Hugging Face" title="Hugging Face"><i class="fas fa-robot"></i></a>
                 </div>
                 <p style="margin-top: 1rem;">Email: <a href="mailto:labs@jaihodigital.com">jaihodigital@gmail.com</a></p>
             </div>
