--- a/pages/research.html
+++ b/pages/research.html
@@ -909,7 +909,7 @@
     <section class="page-hero">
         <div class="page-hero-content">
             <h1>Cutting-Edge Research</h1>
-            <p>Exploring the frontiers of AI, Quantum, and beyond.</p>
+            <p>Exploring the advancement of AI, Quantum, Software Development, BCI and beyond.</p>
         </div>
     </section>
 
@@ -954,8 +954,13 @@
         <p class="text-center text-lg mb-8 text-gray-300">A glimpse into our contributions to the scientific and technological community.</p>
         <ul class="publications-list">
             <li class="publication-item glass-card">
+                <h4>Next Generation Universal Frontend Runtime Environment</h4>
+                <p>Exploring new architectures that can act as the frontend engine for various softwares and applications written in any backend language, 2025</p>
+                <a href="#" target="_blank">Read More <i class="fas fa-external-link-alt"></i></a>
+            </li>
+            <li class="publication-item glass-card">
                 <h4>Advancements in Multimodal AI for Content Generation</h4>
-                <p>Exploring novel architectures for generating synchronized video, image, and text content from single prompts. Published in Journal of AI Research, 2024.</p>
+                <p>Exploring novel architectures for generating synchronized video, image, and text content from single prompts. Published in Journal of AI Research, 2025.</p>
                 <a href="#" target="_blank">Read More <i class="fas fa-external-link-alt"></i></a>
             </li>
             <li class="publication-item glass-card">
@@ -971,7 +976,7 @@
             <li class="publication-item glass-card">
                 <h4>Predictive Analytics with Visio AI: Case Studies</h4>
                 <p>Showcasing real-world applications of Visio AI in predictive maintenance and customer behavior analysis. Internal Whitepaper, 2024.</p>
-                <a href="#" target="_blank">Request Access <i class="fas fa-lock"></i></a>
+                <a href="https://visio-ai.streamlit.app" target="_blank">Request Access <i class="fas fa-lock"></i></a>
             </li>
         </ul>
     </section>
@@ -1011,10 +1016,10 @@
             <p style="color: #f8fafc; text-align: center;"><strong>Headquarters:</strong> Tanda Urmar, Punjab, India</p>
             <p style="color: #f8fafc; text-align: center;"><strong>Development Center:</strong> Mohali, Punjab, India</p>
             <div class="social-links" style="margin-top: 2rem;">
-                <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/company/jaihoailabs" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/Jaiho-Digital" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                <a href="#" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                <a href="#" target="_blank" aria-label="Hugging Face" title="Hugging Face"><i class="fas fa-robot"></i></a>
+                <a href="https://instagram.com/jaihodigital" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://huggingface.co/jaiholabs" target="_blank" aria-label="Hugging Face" title="Hugging Face"><i class="fas fa-robot"></i></a>
             </div>
         </div>
     </section>
@@ -1028,7 +1033,7 @@
             <div class="footer-section">
                 <h3>Jaiho Labs</h3>
                 <p>Where Ideas Become Intelligent Products.</p>
-                <p class="sub-brand">A Division of <a href="jaihodigital.onrender.com" target="_blank">Jaho Digital</a></p>
+                <p class="sub-brand">A Division of <a href="jaiho-digital.onrender.com" target="_blank">Jaiho Digital</a></p>
             </div>
             <div class="footer-section">
                 <h3>Quick Links</h3>
@@ -1042,11 +1047,12 @@
             <div class="footer-section">
                 <h3>Connect</h3>
                 <div class="footer-socials">
-                    <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://github.com/Jaiho-Digital" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.linkedin.com/company/jaihoailabs" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/Jaiho-Digital" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                    <a href="https://instagram.com/jaihodigital" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://huggingface.co/jaiholabs" target="_blank" aria-label="Hugging Face" title="Hugging Face"><i class="fas fa-robot"></i></a>    
                 </div>
-                <p style="margin-top: 1rem;">Email: <a href="mailto:labs@jaihodigital.com">jaihodigital@gmail.com</a></p>
+                <p style="margin-top: 1rem;">Email: <a href="mailto:jaihodigital@gmail.com">jaihodigital@gmail.com</a></p>
             </div>
             <div class="footer-section">
                 <h3>Newsletter</h3>
