innvation pipeline update, docs update, resources update

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -756,7 +756,7 @@
                 </div>
                 <h3>Learning Resources</h3>
                 <p>Interactive tutorials, video courses, webinars, and educational content to master our technologies.</p>
-                <a href="#" class="btn btn-primary">Start Learning</a>
+                <a href="https://itsarc.w3spaces.com/itsarc2.html?fname=&lname=" target="_blank" class="btn btn-primary">Start Learning</a>
             </div>
 
             <div class="resource-card whitepaper-card" onclick="openModal('whitepaper')">
@@ -812,26 +812,27 @@
             <div class="footer-section">
                 <h3>Jaiho Labs</h3>
                 <p>Where Ideas Become Intelligent Products.</p>
-                <p class="sub-brand">A Division of <a href="#" target="_blank">Jaho Digital</a></p>
+                <p class="sub-brand">A Division of <a href="https://jaiho-digital.onrender.com" target="_blank">Jaiho Digital</a></p>
             </div>
             <div class="footer-section">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="..index.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="products.html">Products</a></li>
                     <li><a href="research.html">Research</a></li>
                     <li><a href="team.html">Team</a></li>
                     <li><a href="career.html">Careers</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="../index.html#contact">Contact</a></li>
                 </ul>
             </div>
             <div class="footer-section">
                 <h3>Connect</h3>
                 <div class="footer-socials">
-                    <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/company/jaihoailabs" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/Jaiho-Digital" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="https://instagram.com/jaihodigital" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://huggingface.co/jaiholabs" target="_blank" aria-label="Hugging Face" title="Hugging Face"><i class="fas fa-robot"></i></a>
                 </div>
                 <p style="margin-top: 1rem;">Email: <a href="mailto:labs@jaihodigital.com">jaihodigital@gmail.com</a></p>
             </div>
