--- a/pages/career.html
+++ b/pages/career.html
@@ -1052,10 +1052,10 @@
             <p style="color: #f8fafc; text-align: center;"><strong>Headquarters:</strong> Tanda Urmar, Punjab, India</p>
             <p style="color: #f8fafc; text-align: center;"><strong>Development Center:</strong> Mohali, Punjab, India</p>
             <div class="social-links" style="margin-top: 2rem;">
-                <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/Jaiho-Digital" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                <a href="#" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                <a href="#" target="_blank" aria-label="Hugging Face" title="Hugging Face"><i class="fas fa-robot"></i></a>
+                <a href="https://www.linkedin.com/company/jaihoailabs" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/Jaiho-Digital" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://instagram.com/jaihodigital" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://huggingface.co/jaiholabs" target="_blank" aria-label="Hugging Face" title="Hugging Face"><i class="fas fa-robot"></i></a>
             </div>
         </div>
     </section>
@@ -1069,7 +1069,7 @@
             <div class="footer-section">
                 <h3>Jaiho Labs</h3>
                 <p>Where Ideas Become Intelligent Products.</p>
-                <p class="sub-brand">A Division of <a href="https://jaihodigital.onrender.com" target="_blank">Jaho Digital</a></p>
+                <p class="sub-brand">A Division of <a href="https://jaiho-digital.onrender.com" target="_blank">Jaiho Digital</a></p>
             </div>
             <div class="footer-section">
                 <h3>Quick Links</h3>
@@ -1087,9 +1087,10 @@
             <div class="footer-section">
                 <h3>Connect</h3>
                 <div class="footer-socials">
-                    <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/company/jaihoailabs" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/Jaiho-Digital" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="https://instagram.com/jaihodigital" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://huggingface.co/jaiholabs" target="_blank" aria-label="Hugging Face" title="Hugging Face"><i class="fas fa-robot"></i></a>
                 </div>
                 <p style="margin-top: 1rem;">Email: <a href="mailto:labs@jaihodigital.com">jaihodigital@gmail.com</a></p>
             </div>
