--- a/pages/products.html
+++ b/pages/products.html
@@ -1182,6 +1182,21 @@
                 link: 'https://github.com/avarshvir/Dev-Link-Software-for-Developers-and-Users' // Placeholder link
             },
             {
+                id: 'dev-link-tools-web',
+                name: 'Dev Link Web',
+                logo: 'DW',
+                category: 'Software',
+                description: 'A comprehensive web suite of utility, professional, and developer tools designed to boost productivity and streamline workflows for engineers and creators.',
+                tags: ['Software', 'Developer Tools', 'Utilities', 'Productivity', 'AI'],
+                features: [
+                    'Code snippet management',
+                    'API testing and documentation tools',
+                    'Project management utilities',
+                    'Cross-platform compatibility'
+                ],
+                link: 'https://devlink.streamlit.app/' // Placeholder link
+            },
+            {
                 id: 'gita-py',
                 name: 'Gita-Py',
                 logo: 'GP',
