--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jaiho Labs - Where Ideas Become Intelligent Products</title>
+    <meta name="description" content="Jaiho Labs focus spans over AI, Quantum Computing, NLP, Computer Vision, Software Development, BCI and Ethical AI - pushing the boundaries of what's possible.">
+    <meta name="keywords" content="Jaiho Labs, software development, AI, quantum computing, cloud computing, machine learning, ML, Tanda, Punjab, India, Hoshiarpur">
+    <meta name="author" content="Jaiho Labs">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Inter:wght@300;400;500;600;700;800&family=IBM+Plex+Serif:ital,wght@1,400&display=swap" rel="stylesheet">
     <link rel="icon" href="images/favicon-32x32.png" type="image/png">
+    <!-- Canonical -->
+    <link rel="canonical" href="https://jaiho-labs.onrender.com/">
+
+    <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+    <meta property="og:title" content="Jaiho Labs - Where Ideas Become Intelligent Products">
+    <meta property="og:description" content="Jaiho Labs focus spans over AI, Quantum Computing, NLP, Computer Vision, Software Development, BCI and Ethical AI - pushing the boundaries of what's possible.">
+    <meta property="og:image" content="https://jaiho-labs.onrender.com/images/logo.jpeg">
+    <meta property="og:url" content="https://jaiho-labs.onrender.com/">
+    <meta property="og:type" content="website">
+
+    <!-- X Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Jaiho Labs - Where Ideas Become Intelligent Products">
+    <meta name="twitter:description" content="Jaiho Labs focus spans over AI, Quantum Computing, NLP, Computer Vision, Software Development, BCI and Ethical AI - pushing the boundaries of what's possible.">
+    <meta name="twitter:image" content="https://jaiho-labs.onrender.com/images/logo.jpeg">
     <style>
         /* Basic Reset & Font */
         * {
