--- a/pages/resources.html
+++ b/pages/resources.html
@@ -765,7 +765,7 @@
                 </div>
                 <h3>Technical Whitepapers</h3>
                 <p>In-depth research papers, technical analyses, and industry insights from our expert research teams.</p>
-                <a href="#" class="btn btn-primary">Read Papers</a>
+                <a href="products_resources/technical_whitepapers/technical_whitepapers.html" class="btn btn-primary">Read Papers</a>
             </div>
 
             <div class="resource-card support-card" onclick="openModal('support')">
